--- a/client/index.html
+++ b/client/index.html
@@ -6,9 +6,9 @@
   <link rel="icon" type="image/png" href="/src/assets/home-icon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>HaMekomon</title>
-  <meta key="title" content="Vite + HeroUI" property="og:title" />
-  <meta content="Make beautiful websites regardless of your design experience." property="og:description" />
-  <meta content="Make beautiful websites regardless of your design experience." name="description" />
+  <meta key="title" content="HaMekomon" property="og:title" />
+  <meta content="The Local Musical Map" property="og:description" />
+  <meta content="The Local Musical Map" name="description" />
   <meta key="viewport"
     content="viewport-fit=cover, width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
     name="viewport" />
